--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,26 +9,41 @@
         android:id="@+id/playerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:keepScreenOn="true"
         app:show_buffering="always"
         app:use_controller="true" 
         app:controller_layout_id="@layout/exo_player_control_view" />
+
+    <ImageView
+        android:id="@+id/ivCenterLogo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_cinema_logo"
+        android:alpha="0.3" />
 
     <LinearLayout
         android:id="@+id/uiContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="#E6000000"
-        android:padding="10dp"
-        android:visibility="visible">
+        android:background="#F2000000"
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
+            android:layout_weight="0.8"
+            android:orientation="vertical"
+            android:background="#1A1A1A">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="CINE VIP"
+                android:textColor="#FFD700"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:padding="15dp"/>
             <EditText
                 android:id="@+id/etSearch"
                 android:layout_width="match_parent"
@@ -37,54 +52,35 @@
                 android:textColor="#FFFFFF"
                 android:textColorHint="#AAAAAA"
                 android:background="#333333"
-                android:padding="12dp"
-                android:layout_marginBottom="8dp"
-                android:singleLine="true"
-                android:imeOptions="actionDone"
-                android:nextFocusDown="@+id/rvGroups" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="CATEGORÍAS"
-                android:textColor="#FF0000"
-                android:textStyle="bold"
-                android:padding="5dp"/>
-
+                android:padding="10dp"
+                android:layout_margin="5dp"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvGroups"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:nextFocusRight="@+id/rvChannels"
-                android:nextFocusUp="@+id/etSearch"/>
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
         <LinearLayout
              android:layout_width="0dp"
              android:layout_height="match_parent"
-             android:layout_weight="1.5"
+             android:layout_weight="2.2"
              android:orientation="vertical"
              android:layout_marginLeft="10dp">
-             
             <TextView
+                android:id="@+id/tvCategoryTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CANALES"
-                android:textColor="#FF0000"
+                android:text="CARTELERA"
+                android:textColor="#FFD700"
                 android:textStyle="bold"
-                android:padding="5dp"/>
-
+                android:padding="10dp"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvChannels"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:nextFocusLeft="@+id/rvGroups"/>
+                android:layout_height="match_parent"/>
         </LinearLayout>
-            
     </LinearLayout>
-
+    
     <LinearLayout
         android:id="@+id/infoContainer"
         android:layout_width="match_parent"
@@ -94,22 +90,19 @@
         android:padding="20dp"
         android:background="#CC000000"
         android:visibility="gone">
-        
         <TextView
             android:id="@+id/tvChannelName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
+            android:textColor="#FFD700"
             android:textSize="22sp"
             android:textStyle="bold"
             android:text="" />
-
         <TextView
             android:id="@+id/tvStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#AAAAAA"
-            android:textSize="14sp"
+            android:textColor="#FFFFFF"
             android:text="" />
     </LinearLayout>
 </FrameLayout>
