--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
-
-    <androidx.media3.ui.PlayerView
+    android:background="#050505"> <androidx.media3.ui.PlayerView
         android:id="@+id/playerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,11 +13,11 @@
 
     <ImageView
         android:id="@+id/ivCenterLogo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_cinema_logo"
-        android:alpha="0.3" />
+        android:alpha="0.2" />
 
     <LinearLayout
         android:id="@+id/uiContainer"
@@ -27,37 +25,43 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:background="#F2000000"
-        android:padding="10dp">
+        android:padding="8dp">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.8"
             android:orientation="vertical"
-            android:background="#1A1A1A">
+            android:background="#121212"
+            android:elevation="10dp">
+            
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="CINE VIP"
                 android:textColor="#FFD700"
-                android:textSize="20sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:padding="15dp"/>
+            
             <EditText
                 android:id="@+id/etSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="🔍 Buscar..."
+                android:hint="🔍 Buscar Película..."
                 android:textColor="#FFFFFF"
-                android:textColorHint="#AAAAAA"
+                android:textColorHint="#888888"
                 android:background="#333333"
                 android:padding="10dp"
-                android:layout_margin="5dp"/>
+                android:layout_margin="10dp"
+                android:singleLine="true"/>
+                
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvGroups"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scrollbars="none"/>
         </LinearLayout>
 
         <LinearLayout
@@ -65,19 +69,23 @@
              android:layout_height="match_parent"
              android:layout_weight="2.2"
              android:orientation="vertical"
-             android:layout_marginLeft="10dp">
+             android:layout_marginLeft="15dp">
+             
             <TextView
                 android:id="@+id/tvCategoryTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CARTELERA"
+                android:text="ESTRENOS"
                 android:textColor="#FFD700"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:padding="10dp"/>
+                
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvChannels"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"/>
         </LinearLayout>
     </LinearLayout>
     
@@ -87,15 +95,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="vertical"
-        android:padding="20dp"
-        android:background="#CC000000"
+        android:padding="25dp"
+        android:background="#E6000000"
         android:visibility="gone">
         <TextView
             android:id="@+id/tvChannelName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFD700"
-            android:textSize="22sp"
+            android:textSize="26sp"
             android:textStyle="bold"
             android:text="" />
         <TextView
@@ -103,6 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFF"
+            android:textSize="16sp"
             android:text="" />
     </LinearLayout>
 </FrameLayout>
