--- a/app/src/main/res/layout/item_movie_card.xml
+++ b/app/src/main/res/layout/item_movie_card.xml
@@ -2,35 +2,35 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="140dp"
     android:layout_margin="6dp"
     app:cardBackgroundColor="#222222"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@drawable/item_selector_cinema"
-        android:padding="10dp"
+        android:padding="8dp"
+        android:gravity="center"
         android:clickable="true"
         android:focusable="true">
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_gravity="center_horizontal"
             android:src="@android:drawable/ic_media_play"
             app:tint="#FFD700" />
         <TextView
             android:id="@+id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:textColor="#FFFFFF"
-            android:textSize="12sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             android:gravity="center"
-            android:maxLines="2"
+            android:maxLines="3"
             android:ellipsize="end" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
