--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                 android:id="@+id/tvCategoryTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ESTRENOS"
+                android:text="CARTELERA"
                 android:textColor="#FFD700"
                 android:textSize="20sp"
                 android:textStyle="bold"
